[gd_scene load_steps=2 format=3 uid="uid://c4mmqfjtrev34"]

[ext_resource type="Script" path="res://sCRIPTS/Control.gd" id="1_2tudh"]

[node name="MIDI_Controller" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 500.0
offset_right = 2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tudh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 318.0
offset_top = -82.0
offset_right = -358.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 49
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 120

[node name="FrequencySlider" type="VSlider" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PitchSlider" type="VSlider" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TempoSlider" type="VSlider" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -175

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = -0.265
anchor_right = 0.312
anchor_bottom = 0.163
offset_left = 0.431976
offset_top = -0.0449982
offset_right = -0.424011
offset_bottom = 0.0389996
text = "Synth Play"
